[ADD] Fundings info
