# src/controllers/walletController.js
@@ -7,7 +7,9 @@ module.exports = function $walletController(expressify, walletService) {
   return expressify({
     create,
     get,
-    getAll
+    getAll,
+    getFundings,
+    getAllFundings
   });
 
   /**
@@ -28,6 +30,27 @@ module.exports = function $walletController(expressify, walletService) {
   async function get(req, res) {
     const walletInfo = await walletService.getWalletData(req.params.walletId);
     return res.status(200).json(_.omit(walletInfo, sensitiveValues));
+  }
+
+  /**
+   * Gets the information of the project fundings made by a wallet by its id
+   *
+   * @returns {Promise}
+   */
+  async function getFundings(req, res) {
+    const { walletId } = req.params;
+    const fundings = await walletService.getFundings(walletId);
+    return res.status(200).json(fundings);
+  }
+
+  /**
+   * Gets the information of all project fundings
+   *
+   * @returns {Promise}
+   */
+  async function getAllFundings(req, res) {
+    const fundings = await walletService.getAllFundings();
+    return res.status(200).json(fundings);
   }
 
   /**
